--- a/main.mustache
+++ b/main.mustache
@@ -1,7 +1,7 @@
 <h1><img alt="sunglass" src="https://emojis.slackmojis.com/emojis/images/1531849430/4246/blob-sunglasses.gif?1531849430" width="30"/>
     Hey! Nice to see you.</h1>
 
-<p>Welcome to my page! </br> I'm <b>Mohammed Audhil</b>, Fullstack developer from <img alt="india"
+<p>Welcome to my page! <br> I'm <b>Mohammed Audhil</b>, Fullstack developer from <img alt="india"
         src="https://cdn-icons-png.flaticon.com/512/330/330439.png" width="13"/> <b>Chennai, India</b>, currently living
     in <img alt="india" src="https://cdn-icons-png.flaticon.com/512/330/330439.png" width="13"/> <b>Bengaluru, India</b>. </p>
 <h3>Things I code with</h3>
@@ -109,7 +109,7 @@
 ![](https://github-readme-stats.vercel.app/api/top-langs/?username=Audhil&theme=monokai&hide_border=false&include_all_commits=false&count_private=false&layout=compact)
 <br/>
 
-<h3>Github Stats</h3>
+<h3>Github Trophies</h3>
 
 ![](https://github-profile-trophy.vercel.app/?username=Audhil&theme=monokai&no-frame=false&no-bg=false&margin-w=4)<br/>
 
